auto-test/tests/chapter_13/invalid_types/extra_credit/compound_bitwise_xor.c
int main(void) {
    
    int i = 0;
    i |= 2.0;
    return (int) i;
}